--- a/app/views/event/_nav.html.erb
+++ b/app/views/event/_nav.html.erb
@@ -1,1 +1,26 @@
-<h1>Private Events</h1>
+ <nav class="flex flex-col justify-between items-center py-5 px-2 md:px-20 md:flex-row">
+    <%= link_to root_path do %>
+    <h1 class="text-3xl font-bold">PrivateEvents</h1>
+    <% end %>
+
+    <ul class="flex space-x-5 text-lg">
+        <% if current_user %>
+            <li class="nav-item">
+            <%= link_to current_user.username, edit_user_registration_path %>
+            </li>
+            <li class="nav-item">
+            <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
+            </li>
+            <%# <li class="nav-item">
+            <%= link_to "New Event", new_event_path %> %>
+            <%# </li> %>
+        <% else %>
+            <li class="nav-item">
+            <%= link_to_unless_current "Sign Up", new_user_session_path %>
+            </li>
+            <li class="nav-item">
+            <%= link_to_unless_current "Sign In", new_user_registration_path %>
+            </li>
+        <% end %>
+    </ul>
+</nav>
