--- a/app/views/event/_nav.html.erb
+++ b/app/views/event/_nav.html.erb
@@ -6,20 +6,20 @@
     <ul class="flex space-x-5 text-lg">
         <% if current_user %>
             <li class="nav-item">
-            <%= link_to current_user.username, edit_user_registration_path %>
+            <%= link_to "Settings", edit_user_registration_path %>
             </li>
             <li class="nav-item">
             <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
             </li>
-            <%# <li class="nav-item">
-            <%= link_to "New Event", new_event_path %> %>
-            <%# </li> %>
+            <li class="nav-item">
+            <%= link_to "Profile", user_path(current_user) %>
+            </li>
         <% else %>
             <li class="nav-item">
-            <%= link_to_unless_current "Sign Up", new_user_session_path %>
+            <%= link_to_unless_current "Log In", new_user_session_path %>
             </li>
             <li class="nav-item">
-            <%= link_to_unless_current "Sign In", new_user_registration_path %>
+            <%= link_to_unless_current "Create Account", new_user_registration_path %>
             </li>
         <% end %>
     </ul>
