--- a/app/views/events/_nav.html.erb
+++ b/app/views/events/_nav.html.erb
@@ -12,6 +12,9 @@
             <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
             </li>
             <li class="nav-item">
+            <%= link_to "New Event", new_event_path %>
+            </li>
+            <li class="nav-item">
             <%= link_to "Profile", user_path(current_user) %>
             </li>
         <% else %>
