--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,9 @@
 <%= render 'nav' %>
 
-<% @events.reverse.each do |event| %>
-    event.title
-    event.description
+<% @events.each do |event| %>
+    <%= event.creator.username %>
+    <br>
+    <%= event.title %>
+    <br>
+    <%= event.description %>
 <% end %>
