--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,18 @@
 <%=@user.username%><br>
 
+<h2>Events</h2>
 <% @user.events.each do |event| %>
    <%= event.title %>
    <br>
    <%= event.description %>
 <% end %>
+
+<h2>Attending Events</h2>
+<% @user.attended_events.each do |event| %>
+   <%= event.title %>
+   <br>
+   <%= event.description %>
+   <br>
+   <br>
+<% end %>
+
