created events must have dates

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -7,5 +7,8 @@
   <%= form.label :description %><br>
   <%= form.text_area :description %><br><br>
 
+  <%= form.label :date %><br>
+  <%= form.date_field :date %><br><br>
+
   <%= form.submit "Submit" %>
 <% end %>
