if current user is creator of event, join button does not render

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,4 @@
 <%= @event.title %>
-<br>
 <%= @event.description %>
 
 <h2>Attendees</h2>
@@ -7,5 +6,6 @@
     <%= attendee.username %>
 <% end %>
 
-
-<%= render partial:"join" %>
+<% if @event.creator != current_user%>
+    <%= render partial:"join" %>
+<% end %>
