user show page now displays attended and attending events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,11 +1,14 @@
 <%= @event.title %>
 <%= @event.description %>
+<%= @event.date %>
+<%= "Created by #{@event.creator.username}" %>
+
 
 <h2>Attendees</h2>
 <% @event.attendees.reverse.uniq.each do |attendee| %>
     <%= attendee.username %>
 <% end %>
 
-<% if @event.creator != current_user%>
+<% unless @event.creator == current_user %>
     <%= render partial:"join" %>
 <% end %>
